Fixed image not showing bugs

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -119,7 +119,7 @@ iframe{
 }
 .goods{
   width:80%;
-  height: 100%;
+  /*height: 100%;*/
   padding-top:10%;
   padding-bottom: 10%;
   object-fit:cover;
